# src/controllers/authController.js
@@ -4,7 +4,6 @@ require('dotenv').config();
 const secretKey = '${process.env.SECRET_KEY}';
 
 exports.generateToken = (req, res) => {
-    res.header('Access-Control-Allow-Origin', '*');
     
     const user = { id: process.env.ID, username: process.env.USERNAME };
 
