# src/swagger.json
@@ -40,6 +40,23 @@
           },
           "200": {
             "description": "OK",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
             "content": {
               "application/json": {
                 "schema": {
@@ -49,6 +66,11 @@
                   }
                 }
               }
+            },
+            "responseParameters": {
+              "method.response.header.Access-Control-Allow-Headers": "Content-Type",
+              "method.response.header.Access-Control-Allow-Methods": "*",
+              "method.response.header.Access-Control-Allow-Origin": "*"
             }
           }
         }
@@ -97,7 +119,7 @@
                 }
               }
             }
-          }
+          }          
         }
       }
     },
